--- a/products/podinfo/values.yaml
+++ b/products/podinfo/values.yaml
@@ -1,9 +1,9 @@
 backend:
   cacheAddr: tcp://redis:6379
-  replicas: 2.0
+  replicas: 1 #+mpas-ignore
 cache:
   replicas: 1.0
 frontend:
   color: red
   message: Hello, world!
-  replicas: 3.0
+  replicas: 1 #+mpas-ignore
